--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,13 +2,13 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
-cron "15 8,13,18 17-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_pk.js, img-url=rl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
+cron "15 8,13,18 17-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/backup.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist备份
 cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/restore.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist恢复
 cron "0 30 7,10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=http://nm66.top/1.jpg, enabled=true, tag=柠檬咕咚步数红包
-cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=rl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=半点京豆雨
-cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=hrl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=整点京豆雨
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js, img-url=rl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=注销京东会员卡
+cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=半点京豆雨
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=整点京豆雨
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=注销京东会员卡
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
 cron "0-59 9-14 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wdwhd.js, img-url=https://ae01.alicdn.com/kf/Uc5a0618d6a404079af9216e1012e35efs.jpg, enabled=true, tag=我的网红店
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Uc740cff52d1c48c49223a8a7378a54d1q.jpg, enabled=true, tag=动物研究院
