--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -8,7 +8,6 @@ cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/
 cron "0 30 7,10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=http://nm66.top/1.jpg, enabled=true, tag=柠檬咕咚步数红包
 cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=半点京豆雨
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=整点京豆雨
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=注销京东会员卡
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
 cron "0-59 9-14 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wdwhd.js, img-url=https://ae01.alicdn.com/kf/Uc5a0618d6a404079af9216e1012e35efs.jpg, enabled=true, tag=我的网红店
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Uc740cff52d1c48c49223a8a7378a54d1q.jpg, enabled=true, tag=动物研究院
@@ -113,7 +112,7 @@ cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/mai
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, img-url=https://qxzy.top/rules/QuantumultX/img/ygkc.png, enabled=true, tag=阳光矿场
 cron "12 12 24-26 3 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_sister.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️乘风破浪的姐姐
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, enabled=true, tag=⚠️一加盲盒
-cron "5 8,14,20 11-17 5 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_mother_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jump-jump.png, enabled=true, tag=母婴跳一跳
+cron "5 8,14,20 19-25 5 * " script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_mother_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jump-jump.png, enabled=true, tag=母婴跳一跳
 cron "12 15 15-29 3 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_lenovo.js, img-url=https://qxzy.top/rules/QuantumultX/img/z_lenovo.png, enabled=true, tag=联想集卡活动
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_xtg.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_xtg.png, enabled=true, tag=手机尚学季
 cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领现金兑换红包
