--- a/.github/workflows/叮咚养鱼.yml
+++ b/.github/workflows/叮咚养鱼.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 中青阅读
+name: 叮咚养鱼
 
 on:
   workflow_dispatch:
