--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_flp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=飞利浦电视成长记
+cron "25 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
 cron "15 8,13,18 17-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/backup.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist备份
 cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/restore.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist恢复
