--- a/rule/task.conf
+++ b/rule/task.conf
@@ -18,3 +18,8 @@ cron "9 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, tag=中青看看赚
 
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js,  img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/anbo.png, enable=false,tag=58同城
+
+cron "1 8,12,17 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/dingdong_yangyu1.js, tag=叮咚农场养鱼1
+cron "1 8,12,17 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/dingdong_yangyu2.js, tag=叮咚农场养鱼2
+
+
