--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -29,6 +29,7 @@ cron "15 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jd
 cron "0 0-16/8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪积分兑换奖品
 cron "15 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪邀请助力与赛跑助力
 cron "10 0-21/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪偷好友积分与狗粮
+cron "1 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jump.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=跳跳乐瓜分京豆
 cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxnc.png, enabled=true, tag=京喜农场
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_kd.png, enabled=true, tag=京东快递签到
 cron "10-20/5 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东直播
@@ -37,6 +38,7 @@ cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "3 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_moneyTree.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyqs.png, enabled=true, tag=京东摇钱树
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_ms.js, img-url=https://raw.githubusercontent.com/yogayyy/Scripts/master/Icon/shylocks/jd_ms.jpg, enabled=true, tag=京东秒秒币
 cron "10 0,20 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_necklace.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=点点券
+cron "35 1,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_nzmh.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=女装盲盒
 cron "15 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdmc.png, enabled=true, tag=东东萌宠
 cron "12 0-23/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyz.png, enabled=true, tag=京东金融养猪猪
 cron "1 7-21/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdzd.png, enabled=true, tag=种豆得豆
