--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,12 +2,19 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "20 9 21-27 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_mi.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东Redmi合成小金刚
+cron "0 */8 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/helpbang.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/140.png, enabled=true, tag=互利帮(需TF资格)
+cron "20 9 20-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_martin.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=人头马x博朗
+cron "0 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/didi_fruit/main/dd_fruit.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴免费水果
 cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_flp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=飞利浦电视成长记
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/jd/jd_jr_sign.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东金融领豆（不共用京东ck另抓）
 cron "25 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
+cron "0 30 21 * * 2,4,7 " script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/Two_color_ball.png, enabled=true, tag=双色球
+cron "0 */60 6-23 * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/kkj.js, enabled=true, 
 cron "15 8,13,18 17-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/backup.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist备份
 cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/restore.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist恢复
-cron "0 30 7,10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=http://nm66.top/1.jpg, enabled=true, tag=柠檬咕咚步数红包
+cron "0 30 7,10 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=http://nm66.top/1.jpg, enabled=true, tag=柠檬咕咚步数红包
 cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=半点京豆雨
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=整点京豆雨
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
@@ -34,8 +41,8 @@ cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/
 cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://qxzy.top/rules/QuantumultX/img/ryhy.png, enabled=true, tag=如意花园
 cron "25 3 * * 2" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shop_captain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=超级无线组队分奖品
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
-cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
-cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴出行zZPiglet
+cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
+cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://qxzy.top/rules/QuantumultX/img/didi.png, enabled=true, tag=滴滴出行zZPiglet
 cron "30 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dgh.js, img-url=https://ae01.alicdn.com/kf/U48ac7674ccc7422dac2bb266d8c9a17b2.jpg, enabled=true, tag=大公会
 cron "*/60 * * * *" script-path=http://nm66.top/dydhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=true, tag=抖音抖一抖红包
 cron "*/1 * * * *" script-path=http://nm66.top/dyd.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=true, tag=抖音抖一抖
