--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -29,7 +29,7 @@ cron "15 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jd
 cron "0 0-16/8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪积分兑换奖品
 cron "15 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪邀请助力与赛跑助力
 cron "10 0-21/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪偷好友积分与狗粮
-cron "1 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jump.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=跳跳乐瓜分京豆
+cron "1 0,11,21 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jump.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=跳跳乐瓜分京豆
 cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxnc.png, enabled=true, tag=京喜农场
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_kd.png, enabled=true, tag=京东快递签到
 cron "10-20/5 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东直播
