--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 10 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xsg.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=薪时光
 cron "1 0,11,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=跳跳乐瓜分京豆
 cron "20 9 21-27 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_mi.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东Redmi合成小金刚
 cron "0 */8 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/helpbang.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/140.png, enabled=true, tag=互利帮(需TF资格)
