--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_09.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东一次性入会领豆9
+cron "2 0-18/6 * 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_carnivalcity.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东手机狂欢城新一期
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_unbind.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东注销会员修复版
 cron "0 8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cardId_export.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东注销会员链接生成墨鱼版
 cron "1 0,11,21 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jump.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东跳跳乐瓜分京豆
@@ -11,7 +13,7 @@ cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.
 cron "0 8 21-31 5-12 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_jbczy.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东金榜创造营
 cron "20 9 21-27 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_mi.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东Redmi合成小金刚
 cron "0 */8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/helpbang.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/HELPBANG/140.png, enabled=true, tag=互利帮(需TF资格)
-cron "0 30 21 * * 2,4,7 " script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/58xinian/icon/master/Two_color_ball.png, enabled=true, tag=双色球
+cron "0 30 21 * * 2,4,7 " script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/58xinian/icon/master/Two_color_ball.png, enabled=true, tag=彩票监控（原双色球）
 cron "0 */60 6-23 * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/kjj.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬看看集自动阅读
 cron "20 9 20-31 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_martin.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东人头马x博朗
 cron "15 9 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_flp.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东飞利浦电视成长记
