--- a/rule/task.conf
+++ b/rule/task.conf
@@ -6,7 +6,7 @@ cron "*/10 0-1 6 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc
 
 
 # 0点自动脚本
-cron "0 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/dog_jd/master/jx_cfdtx.js,  img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, enable=false, tag=京喜财富岛提现
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/dog_jd/master/jx_cfdtx.js,  img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, tag=京喜财富岛提现
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, img-url=https://raw.githubusercontent.com/Xirou/Script/master/jxc.PNG, enable=false, tag=京小超领蓝币
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/videoqq.png, tag=腾讯视频
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴出行
