--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,9 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "2 0-18/6 * 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东手机狂欢城新一期
+cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东手机狂欢城
+cron "0 0-23/1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_city.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=城城领现金
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xsg.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=薪时光
 cron "1 0,11,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=跳跳乐瓜分京豆
 cron "20 9 21-27 5 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_mi.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东Redmi合成小金刚
@@ -11,6 +14,7 @@ cron "0 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/
 cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_flp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=飞利浦电视成长记
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/jd/jd_jr_sign.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东金融领豆（不共用京东ck另抓）
 cron "25 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
+cron "0 8 21-31 5-12 *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_jbczy.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东金榜创造营
 cron "0 30 21 * * 2,4,7 " script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/Two_color_ball.png, enabled=true, tag=双色球
 cron "0 */60 6-23 * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/kkj.js, enabled=true, 
 cron "15 8,13,18 17-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
