--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,9 +1,8 @@
 # 奇心脚本合集
-# https://qxzy.top/rules/QuantumultX/qixin.conf
+# 已屏蔽大陆ip|请挂v更新脚本
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
-cron "2 0-18/6 * 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东手机狂欢城新一期
-cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东手机狂欢城
+cron "2 0-18/6 * 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东手机狂欢城
 cron "0 0-23/1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_city.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=城城领现金
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xsg.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=薪时光
 cron "1 0,11,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=跳跳乐瓜分京豆
