--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -35,7 +35,7 @@ cron "1 0,11,21 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jd
 cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxnc.png, enabled=true, tag=京喜农场
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_kd.png, enabled=true, tag=京东快递签到
 cron "10-20/5 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东直播
-cron "0,30 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live_redrain.js, enabled=true, 
+cron "0,30 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live_redrain.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=超级直播间红包雨
 cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_market_lottery.js, enabled=true, 
 cron "3 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_moneyTree.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyqs.png, enabled=true, tag=京东摇钱树
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_ms.js, img-url=https://raw.githubusercontent.com/yogayyy/Scripts/master/Icon/shylocks/jd_ms.jpg, enabled=true, tag=京东秒秒币
@@ -50,7 +50,7 @@ cron "20 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, enabled=true, tag=进店领豆
 cron "16 22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_small_home.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/ddxw.png, enabled=true, tag=东东小窝
 cron "8 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdjs.png, enabled=true, tag=京东天天加速
-cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东极速版红包
+cron "0 0,22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东极速版红包
 cron "0 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true, tag=京东极速版
 cron "11 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, enabled=true, tag=东东超市
 cron "10 0,7,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_syj.png, enabled=true, tag=赚京豆
