--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # 已更换新地址https://qxnav.com/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxnav.com/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js, img-url=rl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=注销京东会员卡
 cron "2 0-18/6 * 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_carnivalcity.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=京东手机狂欢城
 cron "0 0-23/1 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_city.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=城城领现金
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xsg.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=薪时光
