--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 */1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELONGCASH/elongcash.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELONGCASH/140.png, enabled=false, tag=同程小猪🐷
 cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东动物联萌618活动
 cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/gxrcw.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/gxrcw.png, enabled=true, tag=高校人才网招聘监控
 cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/sydwzp.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/sydw.png, enabled=true, tag=事业单位招聘监控
@@ -250,7 +251,7 @@ cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "55 23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=取关京东店铺商品
 cron "30 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xgyl.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/58xinian/icon/master/jd_xgyl.png, enabled=true, tag=小鸽有礼2
 cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东京喜签到
-cron "15 17 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/58xinian/icon/master/xmyd.png, enabled=true, tag=小米运动
+cron "15 17 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/jim114042/quanx/main/js/xmSports.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/58xinian/icon/master/xmyd.png, enabled=true, tag=小米运动
 cron "15 12,14,16,20 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/fqkk.js, enabled=true, tag=番茄看看（点击查看脚本阅读详细用法）
 cron "*/10 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/sz.js, img-url=https://ae01.alicdn.com/kf/U0eeed99dbe9a4cf99b73aaed7902a3a9z.jpg, enabled=true, tag=闪挣
 cron "1 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/baosxq.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=宝石星球(查看脚本有用法)
