--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "15 9,20 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_newInteraction.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东618大势新品赏
+cron "15 9,20 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_superbox.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东超级盒子
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_freshgoods.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东抽盲盒一次性领豆
 cron "0,1,2 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/moyushouji.png, enabled=true, tag=京东领现金兑换10元红包
 cron "15 7,15 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/debao.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/moyushouji.png, enabled=true, tag=得宝小程序
