--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -55,6 +55,6 @@ cron "0 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresour
 cron "11 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, enabled=true, tag=东东超市
 cron "10 0,7,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_syj.png, enabled=true, tag=赚京豆
 cron "55 23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=取关京东店铺商品
-cron "13 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_zoo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=618动物联萌
+cron "13 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_zoo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=618动物联萌
 cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京喜签到
 cron "15 17 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/xmyd.png, enabled=true, tag=小米运动
