--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,10 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_xtg_help.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东星推官获取互助0301版
+cron "0 8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
+cron "0 0 0/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/xbzs.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=小宝种树
+cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xtg.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东家电星推官0301版
 cron "40 9-18/3 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_star.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东家电星推官（圈x可能有不停止bug等更新）
 cron "15 9 * 5,6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_jxhb.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东京喜阶梯红包
 cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_10.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东一次性入会领豆10
