--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # 挂v更新https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg_help.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=星推官互助
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=家电星推官
 cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_jxhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东京喜阶梯红包
 cron "15 9,20 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_newInteraction.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=618大势新品赏
