--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "*/5 0 * * *" script-path=http://nm66.top/jd_cctx.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=京东城城分现金自动提现柠檬版
 cron "0 0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_xtg_help.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东星推官获取互助0301版
 cron "0 8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
 cron "0 0 0/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/xbzs.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=小宝种树
