--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -42,7 +42,7 @@ RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/pxylen/abc_/maste
 
 
 # 广告拦截
-RULE-SET,https://anti-ad.net/surge.txt,REJECT
+DOMAIN-SET,https://anti-ad.net/surge2.txt,REJECT
 DOMAIN-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list,REJECT
 RULE-SET,https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AdvertisingTest/AdvertisingTest.list,REJECT
 
