--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -157,7 +157,23 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 
 
-[host]
+[Host]
+*testflight.apple.com = server:8.8.4.4
+*.qq.com = server:119.28.28.28
+*.tencent.com = server:119.28.28.28
+*.weixin.com = server:119.28.28.28
+*.bilibili.com = server:119.29.29.29
+*.163.com = server:119.29.29.29
+*.126.com = server:119.29.29.29
+*.126.net = server:119.29.29.29
+*.127.net = server:119.29.29.29
+*.netease.com = server:119.29.29.29
+*.mi.com = server:119.29.29.29
+*.xiaomi.com = server:119.29.29.29
+*.pcbeta.com = 120.52.19.113
+mtalk.google.com = 108.177.125.188
+dl.google.com = server:119.29.29.29
+dl.l.google.com = server:119.29.29.29
 
 [MITM]
 enable = true
