--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # 挂v更新https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 8 21-31 5-12 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gold_creator.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=金榜创造营
 cron "*/5 0 * * *" script-path=http://nm66.top/jd_cctx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=城城分现金自动提现
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg_help.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=星推官互助
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=家电星推官
@@ -27,7 +28,6 @@ cron "0 8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/
 cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_flp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=飞利浦电视成长记
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/jd/jd_jr_sign.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东金融领豆（不共用京东ck另抓）
 cron "25 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/member/adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
-cron "0 8 21-31 5-12 *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_jbczy.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东金榜创造营
 cron "0 30 21 * * 2,4,7 " script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/Two_color_ball.png, enabled=true, tag=双色球
 cron "0 */60 6-23 * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/kkj.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkj.png, enabled=true, tag=看看集自动阅读
 cron "15 8,13,18 17-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
