--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -21,6 +21,7 @@ cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "1 12,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_family.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_family.png, enabled=true, tag=京东家庭号
 cron "5 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdnc.png, enabled=true, tag=东东农场
 cron "20 13 * * 6" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_get_share_code.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=获取互助码
+cron "13 1,22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_gold_creator.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=金榜创造营
 cron "13 1,6,22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=东东健康社区
 cron "5-45/20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health_collect.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=东东健康社区收集能量
 cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdfactory.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_factory.png, enabled=true, tag=东东工厂
